add filterByWorkTypeEndpoint To user